# programming

./: .gitignore  LICENSE  README.md
patrons/: CMakeLists.txt
patrons/factory/: CMakeLists.txt
patrons/factory/include/: Factory.hpp  Product.hpp
patrons/factory/src/: Factory.cpp  Product.cpp  main.cpp
patrons/mediator/: CMakeLists.txt
patrons/mediator/include/: Component.hpp  Mediator.hpp
patrons/mediator/src/: Component.cpp  Mediator.cpp  main.cpp
patrons/singleton/: CMakeLists.txt
patrons/singleton/include/: Singleton.hpp
patrons/singleton/src/: Singleton.cpp  main.cpp
patrons/strategy/: CMakeLists.txt
patrons/strategy/include/: Context.hpp  Strategy.hpp
patrons/strategy/src/: Context.cpp  Strategy.cpp  main.cpp
